--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,6 @@
             "email": "jatinraikwar2@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {}
 }
