--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,8 @@
             "email": "jatinraikwar2@gmail.com"
         }
     ],
-    "require": {}
+    "minimum-stability": "dev-master",
+    "require": {
+        "php": ">=5.6.4"
+    }
 }
